view/theme/frio/css/style.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : 17.02.2016, 23:55:45
    Author     : rabuzarus
*/

/* Imports */
/*@import url("frameworks/bootstrap/css/bootstrap.min.css");
@import url("frameworks/bootstrap/css/bootstrap-theme.min.css");
@import url("frameworks/font-awesome/css/font-awesome.min.css");
@import url("frameworks/jasny/css/jasny-bootstrap.min.css");
@import url("frameworks/bootstrap-select/css/bootstrap-select.min.css");
@import url("frameworks/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css");
@import url("frameworks/ekko-lightbox/ekko-lightbox.min.css");
@import url("frameworks/justifiedGallery/justifiedGallery.min.css");
@import url("frameworks/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css");
@import url("font/open_sans/open-sans.css");
@import url("css/hovercard.css");*/


body {
    padding-top: 110px;
    background-color: $bgcolor;
    background-image: url("$background_image");
    background-size: $background_size_img;
    background-attachment: fixed;
    color: #777;
    /*color: #555;*/
    font-family: 'Open Sans',sans-serif;
}
body a {
    /*color: #555;*/
    /*color: #6fdbe8;*/
    color: $link_color;
    text-decoration: none;
}

body a:hover, body a:focus, body a:active, body a.active, body .btn-link:hover{
    /*color: #59d6e4;*/
    color: $link_hover_color;
    text-decoration: none;
}

.wall-item-container a:hover {
    text-decoration: underline;
}

hr {
    margin-top: 10px;
    margin-bottom: 10px;
}
aside hr,
section hr {
    border-color: rgba(238, 238, 238, $contentbg_transp);
}
iframe, img {
    max-width: 100%;
}
.clear {
    clear: both;
}
.no-padding {
    padding: 0;
}
.fakelink {
    cursor: pointer;
}
.hidden {
    display: none !important;
}

/*
* standard page elements
*/
#back-to-top {
    display: none;
    cursor: pointer;
    color: white;
    position: fixed;
    z-index: 49;
    right: 20px;
    bottom: 20px;
    opacity: 1;
    font-size: 2.9em;
    padding: 0 12px 0 12px;
    border-radius: 10px;
    background-color: #aaa;
    line-height: 1.5;
}

a#item-delete-selected {
    cursor: pointer;
    color: white;
    position: fixed;
    z-index: 49;
    right: 20px;
    top: 100px;
    opacity: 0.8;
    font-size: 2.9em;
    padding: 0 12px 0 12px;
    border-radius: 10px;
    background-color: $link_color;
    line-height: 1.5;
    display: none;
}

#toggle_mobile_link {
    display: none;
}

/*
* Overwriting and Extend Bootstrap
*/
.label, .label a {
    color: #fff;
}

/* Buttons */

.btn {
    float: none;
    border: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    -moz-box-shadow: none;
    background-image: none;
    text-shadow: none;
    border-radius: 3px;
    outline: 0!important;
    margin-bottom: 0;
    font-size: 14px;
    font-weight: 600;
    padding: 8px 16px;
}

.btn-default {
    background: #ededed;
    color: #7a7a7a;
}
.btn-sm {
    padding: 4px 8px;
    font-size: 12px;
}
.btn-small {
    padding: 6px 10px;
    font-size: 12px;
    line-height: 1.5;
    border-radius: 3px;
}
.btn-primary {
    background: $nav_bg;
    color: $btn_primary_color !important;
}
.btn-primary:hover, .btn-primary:focus {
    background: $btn_primary_hover_color;
    text-decoration: none;
}
.btn-primary:active, .btn-primary.active {
    outline: 0;
    background: $btn_primary_hover_color !important;
}
.btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.active:hover,
.btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:active:hover,
.open>.dropdown-toggle.btn-primary.focus, .open>.dropdown-toggle.btn-primary:focus,
.open>.dropdown-toggle.btn-primary:hover,.btn-primary.active, .btn-primary:active,
.open>.dropdown-toggle.btn-primary {
    background: $btn_primary_hover_color;
    border-color: none;
}
	
.btn-link {
/*    color: #6fdbe8;*/
    color: $link_color;
}
.btn-link:focus, .btn-link:hover {
    color: #23527c;
}
.btn-eventnav, btn-eventnav:hover {
    font-size: 16px;
    background: none;
    background-color: transparent;
    padding: 0 14px;
}
.btn-separator {
    border-left: 1px solid #777;
}
/*.btn-info {
    background: #6fdbe8;
    color: #fff!important;
}
.btn-info:hover, .btn-info:focus {
    background: #59d6e4!important;
    text-decoration: none;
}
.btn-info:active, .btn-info.active {
    outline: 0;
    background: #59d6e4;
}*/

.btn-main {
    /*background: #6fdbe8;*/
    background: $link_color;
    color: #fff!important;
}
.btn-main:hover, .btn-main:focus {
    /*background: #59d6e4!important;*/
    background: $link_hover_color !important;
    text-decoration: none;
}
.btn-main:active, .btn-main.active {
    outline: 0;
    /*background: #59d6e4;*/
    background: $link_hover_color;
}

.form-control-sm, .input-group-sm>.form-control, .input-group-sm>.input-group-addon, .input-group-sm>.input-group-btn>.btn {
    padding: .275rem .75rem;
    /*font-size: .875rem;*/
    line-height: 1.5;
    height: 30px;
    border-radius: .2rem;
}
/* Bootstrap media class fix/hack
 * This is a test. I thought it does have some
 * issues in some corner cases. Maybe we remove
 * once more
 * https://github.com/twbs/bootstrap/issues/6053
 */
.media, .media-body {
    overflow: visible;
}
.media .media-body {
    display: table-cell;
    width: 10000px;
    *width: auto;
    *zoom: 1;
}
.media:before, .media:after {
    content: "";
    display: table;
}
.media:after {
    clear: both;
}

/* Badges */
.badge {
    vertical-align: baseline;
    background-color: $link_color;
    border-radius: 4px;
}
aside .badge {
    opacity: 0.7;
}

/* disabled elements */
.community-content-wrapper > h3, .network-content-wrapper > .section-title-wrapper {
    display:none;
}

header #site-location {
    display: none;
}
/* ... */

